--- a/angular/src/app/user.component.html
+++ b/angular/src/app/user.component.html
@@ -1,4 +1,4 @@
-<form novalidate #ADD_USER_FORM="ngForm" (ngSubmit)="onSubmitAdd(ADD_USER_FORM)" autocomplete="false">
+<!-- <form novalidate #ADD_USER_FORM="ngForm" (ngSubmit)="onSubmitAdd(ADD_USER_FORM)" autocomplete="false">
     <div>
         <label for="name">Name </label>
         <input type="text" [(ngModel)]="userAddForm.name" name="name" placeholder="Enter your name" required>
@@ -64,4 +64,4 @@
         </div>
         <button [disabled]="EDIT_USER_FORM.invalid" type="submit">Finalize edit</button>
     </form>
-</div>
+</div> -->
