Implemented routing for landing and login

--- a/angular/src/app/login.component.html
+++ b/angular/src/app/login.component.html
@@ -13,3 +13,7 @@
 <button (click)="printToken()">Print Token</button>
 
 <button (click)="goHome()">Go to Home</button>
+
+<br><br>
+<!-- temporary, use on successful login -->
+<button routerLinkActive="active" routerLink="/admin-dashboard" (click)="goToAdminDashboard()">Go To Admin Dashboard</button>
