--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -1,31 +1,41 @@
-<login></login>
+<style>
+    button 
+    { 
+        background-color:aqua ; font-family: serif;
+    }
+</style>
+
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5">
     <div class="container">
-        <a class="navbar-brand" href="#" (click)="toggleHome()">Angular routing!</a>
-            <div *ngIf="inHome" id="inHome">
-                <ul class="nav nav-pills">
-                    <li class="nav-item">
-                        <a class="nav-link" routerLinkActive="active" routerLink="/home" (click)="toggleHome()">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" routerLinkActive="active" routerLink="/about" (click)="toggleHome()">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" routerLinkActive="active" routerLink="/contact" (click)="toggleHome()">Contact</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" routerLinkActive="active" routerLink="/careers" (click)="toggleHome()">Careers</a>
-                    </li>
-                </ul>
-            </div>
+        <a class="navbar-brand" href="#">Home</a>
+            <ul class="nav nav-pills">
+                <li class="nav-item">
+                    <button class="nav-link" routerLinkActive="active" routerLink="/login" (click)="toggleLogin(); toggleLanding()">Go To Login Page</button>
+                </li>
+            </ul>
     </div>
 </nav>
 
+<ng-container *ngIf="showLanding">
+    <landing></landing>
+</ng-container>
 
-<div class="container text-center">
+<ng-container *ngIf="showLogin">
+    <login></login>
+</ng-container>
+
+<ng-container *ngIf="showAdminDashboard">
+    <admin-dashboard></admin-dashboard>
+</ng-container>
+
+
+
+<!-- <div class="container text-center">
     <router-outlet></router-outlet>
-</div>
+</div> -->
 
 
+
+<!-- <question></question> -->
 <!-- <user></user> -->
