--- a/angular/src/app/login.component.html
+++ b/angular/src/app/login.component.html
@@ -16,4 +16,4 @@
 
 <br><br>
 <!-- temporary, use on successful login -->
-<button routerLinkActive="active" routerLink="/admin-dashboard" (click)="goToAdminDashboard()">Go To Admin Dashboard</button>
+<a routerLinkActive="active" routerLink="/admin-dashboard" (click)="goToAdminDashboard();">Go To Admin Dashboard</a>
