--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -1,14 +1,14 @@
-<style>
+<!-- <style>
     button 
     { 
         background-color:aqua ; font-family: serif;
     }
-</style>
+</style> -->
 
 
 
-<ng-container *ngIf="showLanding">
-    <!-- <landing></landing> -->
+<!-- <ng-container *ngIf="showLanding">
+    <landing></landing>
     <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5">
         <div class="container">
             <a class="navbar-brand" href="#">Home</a>
@@ -20,10 +20,10 @@
         </div>
     </nav>
     
-</ng-container>
+</ng-container> -->
 
-<ng-container *ngIf="showLogin">
-    <!-- <login></login> -->
+<!-- <ng-container *ngIf="showLogin">
+    <login></login>
     <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5">
         <div class="container">
             <a class="navbar-brand" href="#">Home</a>
@@ -34,10 +34,10 @@
                 </ul>
         </div>
     </nav>
-</ng-container>
+</ng-container> -->
 
-<ng-container *ngIf="showAdminDashboard">
-    <!-- <admin-dashboard></admin-dashboard> -->
+<!-- <ng-container *ngIf="showAdminDashboard">
+    <admin-dashboard></admin-dashboard>
     <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5">
         <div class="container">
             <a class="navbar-brand" href="#">Home</a>
@@ -48,12 +48,15 @@
                 </ul>
         </div>
     </nav>
-</ng-container>
+</ng-container> -->
+
 
 
 
 <div class="container text-center">
     <router-outlet></router-outlet>
+    <!-- <admin-dashboard></admin-dashboard> -->
+    <!-- <landing></landing> -->
 </div>
 
 
