--- a/angular/src/app/question.component.html
+++ b/angular/src/app/question.component.html
@@ -1,4 +1,4 @@
-<form novalidate #QUESTION_FORM="ngForm" (ngSubmit)="onSubmitQuestion(question_form)">
+<!-- <form novalidate #QUESTION_FORM="ngForm" (ngSubmit)="onSubmitQuestion(question_form)">
     <div>
         <label for="qcreated_by">Creator</label>
         <input type="text" [(ngModel)]="question_form.qcreated_by" name="qcreated_by" required>
@@ -22,15 +22,15 @@
     </div>
     
     <button [disabled]="QUESTION_FORM.invalid" type="submit">Submit</button>
-</form>
+</form> -->
 
 <ng-container *ngFor="let question of questions; let i = index">
     {{question.qcreated_by}}
     {{question.qapproved_by}}
     {{question.topic}}
     {{i}}
-
-    <button (click)="onOpenAnswerForm(question)">Answer</button> <br>
+    
+    <!-- <button (click)="onOpenAnswerForm(question)">Answer</button> <br>
     
     <div *ngIf='(question.toggleAnswer)'>
         <answer (answerEventEmitter)='updateCurrQuestionsAnswers($event, question)'></answer>
@@ -40,5 +40,9 @@
         <div *ngIf='answer.status == "accepted"'>
             {{answer.image_src}}
         </div>
-    </ng-container>
+    </ng-container> -->
+
+
 </ng-container>
+
+<create-question (newQuestionEvent)="addQuestion($event)"></create-question>
