implemented question and answer to work correctly with the DB, user guard, datetime

--- a/angular/src/app/answer.component.html
+++ b/angular/src/app/answer.component.html
@@ -28,3 +28,6 @@
     
     <button [disabled]="ANSWER_FORM.invalid" type="submit">Submit</button>
 </form>
+<!-- <ng-container *ngIf="answerSubmitted">
+    <p  routerLinkActive="active" routerLink="/admin-dashboard"></routerLinkActive>
+</ng-container> -->
