--- a/angular/src/app/app-routing/login/login.component.html
+++ b/angular/src/app/app-routing/login/login.component.html
@@ -16,4 +16,4 @@
 
 <br><br>
 <!-- temporary, use on successful login -->
-<button class="nav-link" routerLinkActive="active" routerLink="/admin-dashboard">Go To Admin Dash</button>
+<!-- <button class="nav-link" routerLinkActive="active" routerLink="/admin-dashboard">Go To Admin Dash</button> -->
