--- a/angular/src/app/question.component.html
+++ b/angular/src/app/question.component.html
@@ -29,6 +29,7 @@
     {{question.qcreated_by}}
     {{question.qapproved_by}}
     {{question.topic}}
+    {{question.datetime}}
     {{i}}
 
     <button routerLinkActive="active" routerLink="/question-details" (click)="setCurrQuestionId(question.id)">Question Details</button> <br>
