--- a/angular/src/app/app-routing/admin-dashboard/admin-dashboard.component.html
+++ b/angular/src/app/app-routing/admin-dashboard/admin-dashboard.component.html
@@ -1,5 +1,19 @@
 <p>I'm in the admin-dashboard component!</p>
-<button class="nav-link" routerLinkActive="active" routerLink="/create-question" (click)="showQuestionForm()">Go To Create Question</button>
+
+<!-- <ng-container *ngIf="userType == 'admin'"> -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5">
+        <div class="container">
+            <a class="navbar-brand" href="#">Home</a>
+                <ul class="nav nav-pills">
+                    <li class="nav-item">
+                        <button class="nav-link" routerLinkActive="active" routerLink="/admin-dashboard">Go to Admin Dash</button>
+                    </li>
+                </ul>
+        </div>
+    </nav>
+<!-- </ng-container> -->
+
+<button class="nav-link" routerLinkActive="active" routerLink="/create-question">Go To Create Question</button>
 
 <br><br><br>
 
