--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -50,11 +50,36 @@
     </nav>
 </ng-container> -->
 
-
+<ng-container *ngIf="userType == 'admin'">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5">
+        <div class="container">
+            <a class="navbar-brand" href="#">Home</a>
+                <ul class="nav nav-pills">
+                    <li class="nav-item">
+                        <button class="nav-link" routerLinkActive="active" routerLink="/admin-dashboard">Go to Admin Dash</button>
+                    </li>
+                </ul>
+        </div>
+    </nav>
+</ng-container>
+<!-- <div ng-if="reports[0].reportType == 'REPORT_TOP_SELLERS'"></div> -->
+<ng-container *ngIf="userType == 'user'">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5">
+        <div class="container">
+            <a class="navbar-brand" href="#">Home</a>
+                <ul class="nav nav-pills">
+                    <li class="nav-item">
+                        <button class="nav-link" routerLinkActive="active" routerLink="/user-dashboard">Go to User Dash</button>
+                    </li>
+                </ul>
+        </div>
+    </nav>
+</ng-container>
 
 
 <div class="container text-center">
-    <router-outlet></router-outlet>
+    <router-outlet>
+    </router-outlet>
     <!-- <admin-dashboard></admin-dashboard> -->
     <!-- <landing></landing> -->
 </div>
