--- a/angular/src/app/app-routing/admin-dashboard/admin-dashboard.component.html
+++ b/angular/src/app/app-routing/admin-dashboard/admin-dashboard.component.html
@@ -8,6 +8,9 @@
                     <li class="nav-item">
                         <button class="nav-link" routerLinkActive="active" routerLink="/admin-dashboard">Go to Admin Dash</button>
                     </li>
+                    <li class="nav-item">
+                        <button class="nav-link" routerLinkActive="active" routerLink="/pending-questions">Go to Pending Questions</button>
+                    </li>
                 </ul>
         </div>
     </nav>
