implemented pending answer page full functionality, kept the navbar constant across pending pages

--- a/angular/src/app/app-routing/admin-dashboard/admin-dashboard.component.html
+++ b/angular/src/app/app-routing/admin-dashboard/admin-dashboard.component.html
@@ -11,6 +11,9 @@
                     <li class="nav-item">
                         <button class="nav-link" routerLinkActive="active" routerLink="/pending-questions">Go to Pending Questions</button>
                     </li>
+                    <li class="nav-item">
+                        <button class="nav-link" routerLinkActive="active" routerLink="/pending-answers">Go to Pending Answers</button>
+                    </li>
                 </ul>
         </div>
     </nav>
