--- a/angular/src/app/app-routing/pending-answers/pending-answers.html
+++ b/angular/src/app/app-routing/pending-answers/pending-answers.html
@@ -15,13 +15,13 @@
     </div>
 </nav>
 
-<ng-container *ngFor="let question of questions; let i = index">
-    <ng-container *ngIf="question.status == 'pending'">
-        {{question.id}}
-        {{question.qcreated_by}}
-        {{question.qapproved_by}}
-        {{question.topic}}
-        {{question.datetime}}
+<ng-container *ngFor="let answer of answers; let i = index">
+    <ng-container *ngIf="answer.status == 'pending'">
+        {{answer.id}}
+        {{answer.description_answer}}
+        {{answer.image_src}}
+        {{answer.datetime}}
+        {{answer.question}}
         {{i}}
         <button (click)="approve(i)">Approve</button>
         <button (click)="remove(i)">Remove</button>
