implemented registration page; TODO: merging William's stuff and routing from registration!!!

--- a/angular/src/app/app-routing/login/login.component.html
+++ b/angular/src/app/app-routing/login/login.component.html
@@ -10,9 +10,8 @@
     <button [disabled]="LOGIN_FORM.invalid" type="submit">Login</button>
 </form>
 
-<button (click)="printToken()">Print Token</button>
+<button routerLinkActive="active" routerLink="/register">Register</button>
 
-<button (click)="goHome()">Go to Home</button>
 
 <br><br>
 <!-- temporary, use on successful login -->
