--- a/angular/src/app/app-routing/user-dashboard/user-dashboard.component.html
+++ b/angular/src/app/app-routing/user-dashboard/user-dashboard.component.html
@@ -15,6 +15,10 @@
 
 <button class="nav-link" routerLinkActive="active" routerLink="/create-question">Go To Create Question</button>
 
+<br>
+
+<button class="nav-link" routerLinkActive="active" routerLink="/chat-homepage">Go To Chat</button>
+
 <br><br><br>
 
 <question></question>
