implemented the chat functionality

--- a/angular/src/app/app-routing/admin-dashboard/admin-dashboard.component.html
+++ b/angular/src/app/app-routing/admin-dashboard/admin-dashboard.component.html
@@ -21,6 +21,10 @@
 
 <button class="nav-link" routerLinkActive="active" routerLink="/create-question">Go To Create Question</button>
 
+<br>
+
+<button class="nav-link" routerLinkActive="active" routerLink="/chat-homepage">Go To Chat</button>
+
 <br><br><br>
 
 <question></question>
