Search question works!

--- a/angular/src/app/app-routing/user-dashboard/user-dashboard.component.html
+++ b/angular/src/app/app-routing/user-dashboard/user-dashboard.component.html
@@ -8,6 +8,9 @@
                 <li class="nav-item">
                     <button class="nav-link" routerLinkActive="active" routerLink="/user-dashboard">Go to User Dash</button>
                 </li>
+                <li class="nav-item">
+                    <button class="nav-link" routerLinkActive="active" routerLink="/search-question">Go to Search Question</button>
+                </li>
             </ul>
     </div>
 </nav>
