--- a/angular/src/app/app-routing/admin-dashboard/admin-dashboard.component.html
+++ b/angular/src/app/app-routing/admin-dashboard/admin-dashboard.component.html
@@ -14,6 +14,9 @@
                     <li class="nav-item">
                         <button class="nav-link" routerLinkActive="active" routerLink="/pending-answers">Go to Pending Answers</button>
                     </li>
+                    <li class="nav-item">
+                        <button class="nav-link" routerLinkActive="active" routerLink="/search-question">Go to Search Question</button>
+                    </li>
                 </ul>
         </div>
     </nav>
