--- a/angular/src/app/app-routing/landing/landing.component.html
+++ b/angular/src/app/app-routing/landing/landing.component.html
@@ -1,2 +1,11 @@
-<p>This is the landing page, lesgoooooooooooo</p>
-<button class="nav-link" routerLinkActive="active" routerLink="/login">Go To Login Page</button>
+<!-- <p>This is the landing page, lesgoooooooooooo</p> -->
+<!-- <button class="nav-link" routerLinkActive="active" routerLink="/login">Go To Login Page</button> -->
+<head>
+    <link rel="stylesheet" type="text/css" href="landing.component.css">
+  </head>
+<body>
+<p style="font-size: 48">Welcome to doConnect</p>
+<div class="container">
+    <button class="button" routerLinkActive="active" routerLink="/login">Login/Register</button>
+  </div>
+</body>
