--- a/angular/src/app/app-routing/landing/landing.component.html
+++ b/angular/src/app/app-routing/landing/landing.component.html
@@ -1,5 +1,7 @@
 <!-- <p>This is the landing page, lesgoooooooooooo</p> -->
 <!-- <button class="nav-link" routerLinkActive="active" routerLink="/login">Go To Login Page</button> -->
+<!doctype html>
+<html lang="en">
 <head>
     <link rel="stylesheet" type="text/css" href="landing.component.css">
   </head>
@@ -9,3 +11,4 @@
     <button class="button" routerLinkActive="active" routerLink="/login">Login/Register</button>
   </div>
 </body>
+</html>
