bad email good everything else

--- a/angular/src/app/app-routing/create-question/create-question.component.html
+++ b/angular/src/app/app-routing/create-question/create-question.component.html
@@ -50,3 +50,7 @@
     
     <button [disabled]="QUESTION_FORM.invalid" type="submit">Submit</button>
 </form>
+<!-- 
+<div *ngIf="mailtime">
+    {{subMail()}}
+</div> -->
