--- a/angular/src/app/app-routing/login/login.component.html
+++ b/angular/src/app/app-routing/login/login.component.html
@@ -1,18 +1,31 @@
-<form novalidate #LOGIN_FORM="ngForm" (ngSubmit)="onSubmitLogin(LOGIN_FORM)">
+<form class="login-form">
+
+<head>
+    <link rel="stylesheet" type="text/css" href="login.component.css">
+  </head>
+
+<body><h1>Welcome to Group 5's Capstone!</h1>
+
+
+<form class="center" novalidate #LOGIN_FORM="ngForm" (ngSubmit)="onSubmitLogin(LOGIN_FORM)">
     <div>
-        <label for="userName">Username</label>
+        <label for="userName" p style="font-family:Arial, Helvetica, sans-serif">Username</label>
         <input type="text" [(ngModel)]="loginForm.userName" name="userName" required>
     </div>
     <div>
-        <label for="password">Password</label>
+        <label for="password" p style="font-family:Arial, Helvetica, sans-serif">Password&nbsp;</label>
         <input type="text" [(ngModel)]="loginForm.password" name="password" required minlength="4">
     </div> 
-    <button [disabled]="LOGIN_FORM.invalid" type="submit">Login</button>
+<div class="center">
+    <button [disabled]="LOGIN_FORM.invalid" class="button1" type="submit">Login</button>
+    <button routerLinkActive="active" class="button" routerLink="/register">Register</button>
+</div>
 </form>
 
-<button routerLinkActive="active" routerLink="/register">Register</button>
+</body>
 
 
 <br><br>
 <!-- temporary, use on successful login -->
 <!-- <button class="nav-link" routerLinkActive="active" routerLink="/admin-dashboard">Go To Admin Dash</button> -->
+</form>
