--- a/angular/src/app/app-routing/register/register.component.css
+++ b/angular/src/app/app-routing/register/register.component.css
@@ -1,15 +1,21 @@
-/* CSS code for landing page */
-
-/* Set the background image */
-.landing-form {
+/* Style the login form */
+.register-form {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     height: 100vh;
   }
+  
+  /* Style the input fields */
+  input[type="text"] {
+    padding: 10px;
+    margin: 10px;
+    width: 300px;
+    font-size:14px;
+  }
 
-  /* Style the heading */
+    /* Style the heading */
 h1 {
     color: black; /* Sets the text color to black */
     font-size: 4rem; /* Adjusts the font size of the heading */
@@ -17,16 +23,12 @@ h1 {
     margin-top: 10%; /* Adds top margin to push the heading down from the top of the page */
   }
 
-
-  
-  /* Create a container for the login/register button */
-  .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 45%;
+.center {
+    margin: auto;
+    width: 60%;
+    padding: 10px;
   }
-  
+
   /* Style the button */
   .button {
     background-color: #4CAF50; /* Green */
@@ -39,11 +41,9 @@ h1 {
     font-size: 16px;
     border-radius: 5px;
     cursor: pointer;
-
   }
   
   /* Hover effect */
   .button:hover {
     background-color: #3e8e41;
   }
-  
