--- a/angular/src/app/app-routing/register/register.component.html
+++ b/angular/src/app/app-routing/register/register.component.html
@@ -1,27 +1,46 @@
-<form novalidate #REGISTER_FORM="ngForm" (ngSubmit)="onSubmitRegister()">
-    <div>
-        <label for="userName">Username</label>
-        <input type="text" [(ngModel)]="registerForm.userName" name="userName" required>
-    </div>
-    <div>
-        <label for="password">Password</label>
-        <input type="text" [(ngModel)]="registerForm.password" name="password" required minlength="4">
-    </div>
-    <div>
-        <label for="email">Email</label>
-        <input type="text" [(ngModel)]="registerForm.email" name="email" required>
-    </div>
-    <div>
-        <label for="name">Name</label>
-        <input type="text" [(ngModel)]="registerForm.name" name="name" required>
-    </div>
-    <br>
-    <div>
-        <label for="userType">User Type </label>
-        <select name="userType" [(ngModel)]="registerForm.userType">
-            <option *ngFor="let u of userTypes" [ngValue]="u">{{u}}</option>
-        </select>
-    </div>
-    <br>
-    <button [disabled]="REGISTER_FORM.invalid" type="submit">Register</button>
+<form class="register-form"> 
+
+    <head>
+        <link rel="stylesheet" type="text/css" href="register.component.css">
+    </head>
+    
+    <body>
+        <h1>Register:</h1>
+    
+        <form class="center" novalidate #REGISTER_FORM="ngForm" (ngSubmit)="onSubmitRegister()">
+            <div>
+                <label for="userName" p style="font-family:Arial, Helvetica, sans-serif">Username</label>
+                <input type="text" [(ngModel)]="registerForm.userName" name="userName" required>
+            </div>
+            <div>
+                <label for="password" p style="font-family:Arial, Helvetica, sans-serif">Password</label>
+                <input type="text" [(ngModel)]="registerForm.password" name="password" required minlength="4">
+            </div>
+            <div>
+                <label for="email" p style="font-family:Arial, Helvetica, sans-serif">Email</label>
+                <input type="text" [(ngModel)]="registerForm.email" name="email" required>
+            </div>
+            <div>
+                <label for="name" p style="font-family:Arial, Helvetica, sans-serif">Name</label>
+                <input type="text" [(ngModel)]="registerForm.name" name="name" required>
+            </div>
+            <br>
+            <div>
+                <label for="userType" p style="font-family:Arial, Helvetica, sans-serif">User Type </label>
+                <select name="userType" [(ngModel)]="registerForm.userType">
+                    <option *ngFor="let u of userTypes" [ngValue]="u">{{u}}</option>
+                </select>
+            </div>
+            <br>
+            <div class="center">
+                <button [disabled]="REGISTER_FORM.invalid" type="submit">Register</button>
+            </div>
+        </form>
+
+
+    </body>
+
 </form>
+
+
+
