--- a/angular/src/app/app-routing/admin-dashboard/admin-dashboard.component.html
+++ b/angular/src/app/app-routing/admin-dashboard/admin-dashboard.component.html
@@ -1,32 +1,14 @@
-<p>I'm in the admin-dashboard component!</p>
-
-<!-- <ng-container *ngIf="userType == 'admin'"> -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light mb-5">
-        <div class="container">
-            <a class="navbar-brand" href="#">Home</a>
-                <ul class="nav nav-pills">
-                    <li class="nav-item">
-                        <button class="nav-link" routerLinkActive="active" routerLink="/admin-dashboard">Go to Admin Dash</button>
-                    </li>
-                    <li class="nav-item">
-                        <button class="nav-link" routerLinkActive="active" routerLink="/pending-questions">Go to Pending Questions</button>
-                    </li>
-                    <li class="nav-item">
-                        <button class="nav-link" routerLinkActive="active" routerLink="/pending-answers">Go to Pending Answers</button>
-                    </li>
-                    <li class="nav-item">
-                        <button class="nav-link" routerLinkActive="active" routerLink="/search-question">Go to Search Question</button>
-                    </li>
-                </ul>
-        </div>
-    </nav>
-<!-- </ng-container> -->
-
-<button class="nav-link" routerLinkActive="active" routerLink="/create-question">Go To Create Question</button>
-
-<br>
-
-<button class="nav-link" routerLinkActive="active" routerLink="/chat-homepage">Go To Chat</button>
+<div class="container cyan topBotomBordersOut">
+    <a style="font-size: xx-large; font-weight: 1000; color:white; ">ADMIN DASHBOARD</a>
+    <br><br><br>
+    <a routerLinkActive="active" routerLink="/home">HOME</a>
+    <a routerLinkActive="active" routerLink="/admin-dashboard">ADMIN DASH</a>
+    <a routerLinkActive="active" routerLink="/pending-questions">PENDING QUESTIONS</a>
+    <a routerLinkActive="active" routerLink="/pending-answers">PENDING ANSWERS</a>
+    <a routerLinkActive="active" routerLink="/search-question">SEARCH QUESTION</a>
+    <a routerLinkActive="active" routerLink="/create-question">CREATE QUESTION</a>
+    <a routerLinkActive="active" routerLink="/chat-homepage">CHAT</a>
+</div>
 
 <br><br><br>
 
