--- a/angular/src/app/app-routing/admin-dashboard/admin-dashboard.component.html
+++ b/angular/src/app/app-routing/admin-dashboard/admin-dashboard.component.html
@@ -1,13 +1,13 @@
 <div class="container cyan topBotomBordersOut">
     <a style="font-size: xx-large; font-weight: 1000; color:white; ">ADMIN DASHBOARD</a>
     <br><br><br>
-    <a routerLinkActive="active" routerLink="/home">HOME</a>
-    <a routerLinkActive="active" routerLink="/admin-dashboard">ADMIN DASH</a>
+    <!-- <a routerLinkActive="active" routerLink="/admin-dashboard">ADMIN DASH</a> -->
     <a routerLinkActive="active" routerLink="/pending-questions">PENDING QUESTIONS</a>
     <a routerLinkActive="active" routerLink="/pending-answers">PENDING ANSWERS</a>
     <a routerLinkActive="active" routerLink="/search-question">SEARCH QUESTION</a>
     <a routerLinkActive="active" routerLink="/create-question">CREATE QUESTION</a>
     <a routerLinkActive="active" routerLink="/chat-homepage">CHAT</a>
+    <a routerLinkActive="active" routerLink="/home">LOG OUT</a>
 </div>
 
 <br><br><br>
